--- a/Contact.html
+++ b/Contact.html
@@ -45,6 +45,8 @@
                     <input class="message" type="text" name="comment" placeholder="Bonjour..."><br><br>
                     <input class="envoyer" type="submit" value="Envoyer">
                 </form>
+                <p>Mon numéro de téléphone: 07.50.93.24.75</p>
+                <p>Mon adresse mail : augjac88@gmail.com</p>
             </main>
         <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
