--- a/Contact.html
+++ b/Contact.html
@@ -35,7 +35,7 @@
             </div>
             <span class="bouton-menu" style="font-size:30px;cursor:pointer;color:#FFBA08" onclick="openNav()">&#9776;</span>
             <main>
-                <h1>Contacter-moi</h1>
+                <h1>Contactez-moi</h1>
                 <form action="mailto:augjac88@gmail.com" method="post" enctype="text/plain">
                     Nom:<br>
                     <input type="text" name="name" placeholder="Snow Jon"><br>
