--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
         </script>
         <div id="content">
             <h2>Mes projets</h2>
-            <h3>Motion design</h3>
-                <a href="Lotus.html"><img onmouseover="this.src='medias/gif/Lotus.gif';"  onmouseout="this.src='medias/lotus.JPG';"src="medias/lotus.JPG" alt="Lotus car" width="640" height="360"></a>
-                <a href="Hud.html"><img onmouseover="this.src='medias/gif/Hud.gif';"  onmouseout="this.src='medias/Hud.jpg';"src="medias/Hud.jpg" alt="Hud" width="640" height="360"></a>
-                
             <h3>Court-métrages / Bande annonce / Clip Musical</h3>    
                 <a href="Dark%20Creation.html"><img onmouseover="this.src='medias/gif/Projet tut.gif';"  onmouseout="this.src='medias/Projet tut.jpg';"src="medias/Projet tut.jpg" alt="Court-Métrage" width="640" height="360"></a>
                 <a href="Le%20retour%20de%20m%C3%A9d%C3%A9e.html"><img onmouseover="this.src='medias/gif/bande%20annonce.gif';"  onmouseout="this.src='medias/bande%20annonce.jpg';"src="medias/bande%20annonce.jpg" alt="Court-Métrage" width="640" height="360"></a>
                 <a href="Ganggang.html"><img onmouseover="this.src='medias/gif/ganggang.gif';"  onmouseout="this.src='medias/ganggang.jpg';"src="medias/ganggang.jpg" alt="Clip Musical" width="640" height="360"></a>
             <h3>Vidéo Promotionnelle</h3>
+                <a href="Ferrari.html"><img onmouseover="this.src='medias/gif/Ferrari.jpg';"  onmouseout="this.src='medias/Ferrari.jpg';" src="medias/Ferrari.jpg" alt="Ferrari vidéo commercial" width="640" height="360"></a>
                 <a href="Licence%20Pro%20SARII.html"><img onmouseover="this.src='medias/gif/Interview-capsules.gif';"  onmouseout="this.src='medias/Interview-capsules-Augustin-Sébastien-vf_Trim.jpg';" src="medias/Interview-capsules-Augustin-S%C3%A9bastien-vf_Trim.jpg" alt="Licence pro promotion" width="640" height="360"></a>
                 <a href="Suisse%20Romande.html"><img onmouseover="this.src='medias/gif/SR%20logo%20animation.gif';"  onmouseout="this.src='medias/logo loup v2.png';"src="medias/logo%20loup%20v2.png" alt="Logo animation" width="640" height="360"></a>
                 <a href="Bibliothèque Nancy.html"><img onmouseover="this.src='medias/gif/Biblioth%C3%A8que.gif';"  onmouseout="this.src='medias/Biblioth%C3%A8que.jpg';"src="medias/Biblioth%C3%A8que.jpg" alt="Logo animation" width="640" height="360"></a>
+            <h3>Motion design</h3>
+                <a href="Lotus.html"><img onmouseover="this.src='medias/gif/Lotus.gif';"  onmouseout="this.src='medias/lotus.JPG';"src="medias/lotus.JPG" alt="Lotus car" width="640" height="360"></a>
+                <a href="Hud.html"><img onmouseover="this.src='medias/gif/Hud.gif';"  onmouseout="this.src='medias/Hud.jpg';"src="medias/Hud.jpg" alt="Hud" width="640" height="360"></a>
             <h3>Stop Motion</h3>
                 <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
             <h3>Infographie (Photo-montage, 3D, graphisme)</h3>
