--- a/A propos.html
+++ b/A propos.html
@@ -43,10 +43,28 @@
                     <p>Je m'appelle Augustin JACQUEL, j'ai 20 ans et mon truc à moi, c'est la vidéo. J'ai comme passion la musique et l'automobile toute deux pouvant être utilisé pour la vidéo.</p>
                     <p>Après un bac STI2D (Sciences et Technologies de l'Industrie et du Développement Durable) ITEC (Inovation Technologique et Eco-Conception) mention assez bien, je me suis dirigé vers un DUT MMI (Métier du Multimédia et de l'Internet) mention assez bien également. C'est grâce à cette formation que j'ai pu découvrir l'audiovisuel un monde vaste regorgeant de personnes créatives.</p>
                     <p>Vous recherchez une personne capable d'être à <i><u>l'écoute</u></i> et de <i><u>répondre à vos besoins</u></i> alors n'attendez plus rencontrons nous et réalisons ainsi <i><u>l'irréalisable</u></i>.</p>
-                    <p>Je travaille principalement avec Première Pro, After Effects, Illustrator, Blender ainsi que Photoshop. Je filme avec une caméra Panasonic GH5.</p>
-                    <p></p>
+                    <p>Je travaille principalement avec Première Pro, After Effects, Illustrator, Blender ainsi que Photoshop.</p>
                     <p>Je parle Français, Anglais et Espagnol.</p>
+                    <p>Mon matériel:</p>
                 </div>
+                    <img class="photo2" src="medias/matos/gh5.jpg" alt="caméra">
+                    <figcaption>Panasonic Lumix GH5 (DSLR)</figcaption>
+                    <img class="photo2" src="medias/matos/objectif.jpg" alt="objectif photo">
+                    <figcaption>Objectif Lumix G Vario 12-60 mm F3,5-5,6 ASPH Power O.I.S.</figcaption>
+                    <img class="photo2" src="medias/matos/tr%C3%A9pied.jpg" alt="trépied">
+                    <figcaption>Trépied K&amp;F TM2324</figcaption>
+                    <img class="photo2" src="medias/matos/stabilisateur%20%C3%A9paule.jpg" alt="stabilisateur épaule">
+                    <figcaption>Stabilisateur épaule</figcaption>
+                    <img class="photo2" src="medias/matos/amaran-al-m9.jpg" alt="lumière de poche">
+                    <figcaption>Lampe led Aputure Amaran AL-M9</figcaption>
+                    <img class="photo2" src="medias/matos/filtre.jpg" alt="filtre uv">
+                    <figcaption>Filtre UV variable K&amp;F</figcaption>
+                    <img class="photo2" src="medias/matos/sony.jpg" alt="action caméra">
+                    <figcaption>Action caméra Sony HDR AS-200V</figcaption>
+                    <img class="photo2" src="medias/matos/montre.jpg" alt="montre controle caméra">
+                    <figcaption>Montre de Pilotage Sony RM-LVR2</figcaption>
+                    <img class="photo2" src="medias/matos/disque%20dur.jpg" alt="disque dur">
+                    <figcaption>Disque dur externe Toshiba Canvio Basics</figcaption>
             </main>
             <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
