--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h3>Photographie</h3>
                 <a href="Photographie.html"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
             <h3>Data-visualisation</h3>
-                <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><img src="medias/datavis.JPG" alt="Data-visualisation" width="640" height="360"></a>
+                <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><img src="medias/datavis.jpg" alt="Data-visualisation" width="640" height="360"></a>
         </div> 
     </body>
 </html>
