Modiification et ajout de contenu

--- a/A propos.html
+++ b/A propos.html
@@ -43,7 +43,8 @@
                     <p>Je m'appelle Augustin JACQUEL, j'ai 20 ans et mon truc à moi, c'est la vidéo. J'ai comme passion la musique et l'automobile toute deux pouvant être utilisé pour la vidéo.</p>
                     <p>Après un bac STI2D (Sciences et Technologies de l'Industrie et du Développement Durable) ITEC (Inovation Technologique et Eco-Conception) mention assez bien, je me suis dirigé vers un DUT MMI (Métier du Multimédia et de l'Internet) mention assez bien également. C'est grâce à cette formation que j'ai pu découvrir l'audiovisuel un monde vaste regorgeant de personnes créatives.</p>
                     <p>Vous recherchez une personne capable d'être à <i><u>l'écoute</u></i> et de <i><u>répondre à vos besoins</u></i> alors n'attendez plus rencontrons nous et réalisons ainsi <i><u>l'irréalisable</u></i>.</p>
-                    <p>Je travaille principalement avec Première Pro, After Effects, Illustrator, Blender ainsi que Photoshop.</p>
+                    <p>Je travaille principalement avec Première Pro, After Effects, Illustrator, Lighroom, Photoshop ainsi que Figma.</p>
+                    <p>A la suite de ça j'ai travaillé pour DMConcept en tant que webdesigner pendant 7 mois. J'ai pu développer mes compétences en design web en développement ainsi que l'utilisation de CMS avec Wordpress et Prestashop</p>
                     <p>Je parle Français, Anglais et Espagnol.</p>
                     <p>Mon matériel:</p>
                 </div>
