--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <link rel="icon" href="medias/Logo@4x.png"/>
         <style>
-            .loader{width: 100%; height: 100%; position: absolute; top:0; left: 0; background-color: #000000; display: flex; justify-content: center; align-items: center;z-index: 100;}
+            .loader{width: 100%; height: 100%; position: absolute; top:0; left: 0; background-color: #000000; display: flex; justify-content: center; align-items: center;z-index: 100; overflow: hidden;}
             .boussole{animation: spin 2s linear infinite;width: 200px; height: 200px;}
             @keyframes spin {0% { transform: rotate(0deg); }100% { transform: rotate(360deg); }}
         </style>
@@ -76,6 +76,10 @@
             <h3>Motion design</h3>
                 <a href="Lotus.html"><img onmouseover="this.src='medias/gif/Lotus.gif';"  onmouseout="this.src='medias/lotus.JPG';"src="medias/lotus.JPG" alt="Lotus car" width="640" height="360"></a>
                 <a href="Hud.html"><img onmouseover="this.src='medias/gif/Hud.gif';"  onmouseout="this.src='medias/Hud.jpg';"src="medias/Hud.jpg" alt="Hud" width="640" height="360"></a>
+            <h3>Photographie</h3>
+                <a href="Photographie.html"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
+            <h3>Webdesign</h3>
+                <a href="Webdesing.html"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
             <h3>Stop Motion</h3>
                 <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
             <h3>Infographie (Photo-montage, 3D, graphisme)</h3>
@@ -84,10 +88,18 @@
                 <h3>Analyse Communicationnelle</h3>
                     <a href="Audi.html"><svg class="audi" viewBox="0 -20 196 110.25" style="width: 640px;" id="mySVG"><path  fill="none" stroke="#FFF" stroke-width="7" id="triangle" d="m34,4a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0z" /></svg></a>
             </div>
-            <h3>Photographie</h3>
-                <a href="Photographie.html"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
+            
             <h3>Data-visualisation</h3>
                 <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><img src="medias/datavis.jpg" alt="Data-visualisation" width="640" height="360"></a>
-        </div> 
+        </div>
+        <footer>
+            <div class="medias">
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/augustin-jacquel"><img src="medias/social/linkedin.png" alt="Linkedin logo"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCLsq03tmVhuRY-VeEt8p7TA"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
+                    <li><a href="https://www.instagram.com/augjac88/"><img src="medias/social/Insta.png" alt="Instagram logo"></a></li>
+                </ul>
+            </div>
+        </footer> 
     </body>
 </html>
