--- a/Photographie.html
+++ b/Photographie.html
@@ -37,32 +37,41 @@
             <main>
                 <h1>Photographie</h1>
                 <div class="grid-photo" id="myGrid" style="margin-bottom:128px">
-                  <div class="w3-third">
-                    <img src="medias/P1000631.jpg" style="width:33%">
-                    <img src="medias/P1000632.jpg" style="width:33%">
-                    <img src="medias/P1000635.jpg" style="width:33%">
-                    <img src="medias/P1000636.jpg" style="width:33%">
-                    <img src="medias/P1000640.jpg" style="width:33%">
-                    <img src="medias/P1000643.jpg" style="width:33%">
-                  </div>
+                    <div class="w3-third">
+                        <img src="medias/Chevrolet MonteCarlo-1.jpg" style="width:33%">
+                        <img src="medias/Chevrolet MonteCarlo-2.jpg" style="width:33%">
+                        <img src="medias/Nancybynightaugjac.jpg" style="width:33%">
+                        <img src="medias/Nancybynight.jpg" style="width:33%">
+                        <img src="medias/Mx5-1.jpg" style="width:33%">
+                        <img src="medias/Porsche-1 (2).jpg" style="width:33%">
+                    </div>
+                    <div class="w3-third">
+                        <img src="medias/P1000631.jpg" style="width:33%">
+                        <img src="medias/P1000636.jpg" style="width:33%">
+                        <img src="medias/P1000643.jpg" style="width:33%">
+                        <img src="medias/Rally 10-07-2.jpg" style="width:33%">
+                        <img src="medias/Rally 10-07-4.jpg" style="width:33%">
+                        <img src="medias/Rally 10-07-10.jpg" style="width:33%">
+                    </div>
 
-                  <div class="w3-third">
-                    <img src="medias/portfolio%20(1%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(2%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(3%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(4%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(5%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(6%20of%2012).jpg" style="width:33%">
-                  </div>
+                    <div class="w3-third">
+                        <img src="medias/Rally 10-07-5.jpg" style="width:33%">
+                        <img src="medias/Rally 10-07-7.jpg" style="width:33%">
+                        <img src="medias/Rally 10-07-8.jpg" style="width:33%">
+                        <img src="medias/portfolio%20(1%20of%2012).jpg" style="width:33%">
+                        <img src="medias/portfolio%20(11%20of%2012).jpg" style="width:33%">
+                        <img src="medias/portfolio%20(12%20of%2012).jpg" style="width:33%">
+                    </div>
 
-                  <div class="w3-third">
-                    <img src="medias/portfolio%20(7%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(8%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(9%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(10%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(11%20of%2012).jpg" style="width:33%">
-                    <img src="medias/portfolio%20(12%20of%2012).jpg" style="width:33%">
-                  </div>
+                    <div class="w3-third">
+                        <img src="medias/portfolio%20(10%20of%2012).jpg" style="width:33%">
+                        <img src="medias/portfolio%20(3%20of%2012).jpg" style="width:33%">
+                        <img src="medias/portfolio%20(2%20of%2012).jpg" style="width:33%">
+                        <img src="medias/portfolio%20(9%20of%2012).jpg" style="width:33%">
+                        <img src="medias/portfolio%20(4%20of%2012).jpg" style="width:33%">
+                        <img src="medias/portfolio%20(6%20of%2012).jpg" style="width:33%">
+                        
+                    </div>
                 </div>
             </main>
             <div id="myNav" class="overlay">
