--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Augustin JACQUEL</title>
         <link rel="stylesheet" href="style/test.css">
         <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
@@ -28,9 +29,9 @@
         <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
-                <a href="A%20propos.html">&Agrave; propos</a>
-                <a href="index.html">Projets</a>
-                <a href="Contact.html">Contact</a>
+                <a href="A%20propos.html" aria-label="En savoir plus">&Agrave; propos</a>
+                <a href="index.html" aria-label="La liste des projets">Projets</a>
+                <a href="Contact.html" aria-label="Me contacter">Contact</a>
             </div>
         </div>
                             <!--Bouton de menu-->
@@ -65,37 +66,37 @@
         <div id="content">
             <h2>Mes projets</h2>
             <h3>Court-métrages / Bande annonce / Clip Musical</h3>    
-                <a href="Dark%20Creation.html"><img onmouseover="this.src='medias/gif/Projet tut.gif';"  onmouseout="this.src='medias/Projet tut.jpg';"src="medias/Projet tut.jpg" alt="Court-Métrage" width="640" height="360"></a>
-                <a href="Le%20retour%20de%20m%C3%A9d%C3%A9e.html"><img onmouseover="this.src='medias/gif/bande%20annonce.gif';"  onmouseout="this.src='medias/bande%20annonce.jpg';"src="medias/bande%20annonce.jpg" alt="Court-Métrage" width="640" height="360"></a>
-                <a href="Ganggang.html"><img onmouseover="this.src='medias/gif/ganggang.gif';"  onmouseout="this.src='medias/ganggang.jpg';"src="medias/ganggang.jpg" alt="Clip Musical" width="640" height="360"></a>
+                <a href="Dark%20Creation.html" aria-label="Réalisation court-métrage"><img onmouseover="this.src='medias/gif/Projet tut.gif';"  onmouseout="this.src='medias/Projet tut.jpg';"src="medias/Projet tut.jpg" alt="Court-Métrage" width="640" height="360"></a>
+                <a href="Le%20retour%20de%20m%C3%A9d%C3%A9e.html" aria-label="Bande annonce ficitve"><img onmouseover="this.src='medias/gif/bande%20annonce.gif';"  onmouseout="this.src='medias/bande%20annonce.jpg';"src="medias/bande%20annonce.jpg" alt="Court-Métrage" width="640" height="360"></a>
+                <a href="Ganggang.html" aria-label="Clip musical"><img onmouseover="this.src='medias/gif/ganggang.gif';"  onmouseout="this.src='medias/ganggang.jpg';"src="medias/ganggang.jpg" alt="Clip Musical" width="640" height="360"></a>
             <h3>Photographie</h3>
-                <a href="Photographie.html"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
+                <a href="Photographie.html" aria-label="Photographie réalisées"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
             <h3>Vidéo Promotionnelle</h3>
-                <a href="Ferrari.html"><img onmouseover="this.src='medias/gif/Ferrari.jpg';"  onmouseout="this.src='medias/Ferrari.jpg';" src="medias/Ferrari.jpg" alt="Ferrari vidéo commercial" width="640" height="360"></a>
-                <a href="Licence%20Pro%20SARII.html"><img onmouseover="this.src='medias/gif/Interview-capsules.gif';"  onmouseout="this.src='medias/Interview-capsules-Augustin-Sébastien-vf_Trim.jpg';" src="medias/Interview-capsules-Augustin-S%C3%A9bastien-vf_Trim.jpg" alt="Licence pro promotion" width="640" height="360"></a>
-                <a href="Suisse%20Romande.html"><img onmouseover="this.src='medias/gif/SR%20logo%20animation.gif';"  onmouseout="this.src='medias/logo loup v2.png';"src="medias/logo%20loup%20v2.png" alt="Logo animation" width="640" height="360"></a>
-                <a href="Bibliothèque Nancy.html"><img onmouseover="this.src='medias/gif/Biblioth%C3%A8que.gif';"  onmouseout="this.src='medias/Biblioth%C3%A8que.jpg';"src="medias/Biblioth%C3%A8que.jpg" alt="Logo animation" width="640" height="360"></a>
+                <a href="Ferrari.html" aria-label="Teaser marque Ferrari"><img onmouseover="this.src='medias/gif/Ferrari.jpg';"  onmouseout="this.src='medias/Ferrari.jpg';" src="medias/Ferrari.jpg" alt="Ferrari vidéo commercial" width="640" height="360"></a>
+                <a href="Licence%20Pro%20SARII.html" aria-label="Clip Licence professionnelle"><img onmouseover="this.src='medias/gif/Interview-capsules.gif';"  onmouseout="this.src='medias/Interview-capsules-Augustin-Sébastien-vf_Trim.jpg';" src="medias/Interview-capsules-Augustin-S%C3%A9bastien-vf_Trim.jpg" alt="Licence pro promotion" width="640" height="360"></a>
+                <a href="Suisse%20Romande.html" aria-label="Réalisation logo E-Sport"><img onmouseover="this.src='medias/gif/SR%20logo%20animation.gif';"  onmouseout="this.src='medias/logo loup v2.png';"src="medias/logo%20loup%20v2.png" alt="Logo animation" width="640" height="360"></a>
+                <a href="Bibliothèque Nancy.html" aria-label="clip communicationnelle"><img onmouseover="this.src='medias/gif/Biblioth%C3%A8que.gif';"  onmouseout="this.src='medias/Biblioth%C3%A8que.jpg';"src="medias/Biblioth%C3%A8que.jpg" alt="Logo animation" width="640" height="360"></a>
             <h3>Motion design</h3>
-                <a href="Lotus.html"><img onmouseover="this.src='medias/gif/Lotus.gif';"  onmouseout="this.src='medias/lotus.JPG';"src="medias/lotus.JPG" alt="Lotus car" width="640" height="360"></a>
-                <a href="Hud.html"><img onmouseover="this.src='medias/gif/Hud.gif';"  onmouseout="this.src='medias/Hud.jpg';"src="medias/Hud.jpg" alt="Hud" width="640" height="360"></a>
+                <a href="Lotus.html" aria-label="Animation marque Lotus"><img onmouseover="this.src='medias/gif/Lotus.gif';"  onmouseout="this.src='medias/lotus.JPG';"src="medias/lotus.JPG" alt="Lotus car" width="640" height="360"></a>
+                <a href="Hud.html" aria-label="Réalisation Hud"><img onmouseover="this.src='medias/gif/Hud.gif';"  onmouseout="this.src='medias/Hud.jpg';"src="medias/Hud.jpg" alt="Hud" width="640" height="360"></a>
             <h3>Stop Motion</h3>
-                <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
+                <a href="Stop%20Motion.html" aria-label="Création de stop-motion"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
             <h3>Infographie (Photo-montage, 3D, graphisme)</h3>
-                <a href="Infographie.html"><img src="medias/Infographie/C63%20pop-art.jpg" alt="C63%20pop-art" width="640" height="360"></a>
+                <a href="Infographie.html" aria-label="Infographies réalisés"><img src="medias/Infographie/C63%20pop-art.jpg" alt="C63%20pop-art" width="640" height="360"></a>
             <div class="wrapper">
                 <h3>Analyse Communicationnelle</h3>
-                    <a href="Audi.html"><svg class="audi" viewBox="0 -20 196 110.25" style="width: 640px;" id="mySVG"><path  fill="none" stroke="#FFF" stroke-width="7" id="triangle" d="m34,4a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0z" /></svg></a>
+                    <a href="Audi.html" aria-label="Analyse communicationnelle d'Audi"><svg class="audi" viewBox="0 -20 196 110.25" style="width: 640px;" id="mySVG"><path  fill="none" stroke="#FFF" stroke-width="7" id="triangle" d="m34,4a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0z" /></svg></a>
             </div>
             
             <h3>Data-visualisation</h3>
-                <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><img src="medias/datavis.jpg" alt="Data-visualisation" width="640" height="360"></a>
+                <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html" aria-label="Animation de données"><img src="medias/datavis.jpg" alt="Data-visualisation" width="640" height="360"></a>
         </div>
         <footer>
             <div class="medias">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/augustin-jacquel"><img src="medias/social/linkedin.png" alt="Linkedin logo"></a></li>
-                    <li><a href="https://www.youtube.com/channel/UCLsq03tmVhuRY-VeEt8p7TA"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
-                    <li><a href="https://www.instagram.com/augjac88/"><img src="medias/social/Insta.png" alt="Instagram logo"></a></li>
+                    <li><a href="https://www.linkedin.com/in/augustin-jacquel" aria-label="Découvrir mon profil Linkedin"><img src="medias/social/linkedin.png" alt="Linkedin logo"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCLsq03tmVhuRY-VeEt8p7TA" aria-label="Découvrir mon profil YouTube"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
+                    <li><a href="https://www.instagram.com/augjac88/" aria-label="Découvrir mon profil Instagram"><img src="medias/social/Insta.png" alt="Instagram logo"></a></li>
                 </ul>
             </div>
         </footer> 
