--- a/Données_simple Augustin JACQUEL.html
+++ b/Données_simple Augustin JACQUEL.html
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style/Donn%C3%A9es_simple.css">
         <script src="https://code.jquery.com/jquery-3.3.1.js" crossorigin="anonymous" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="></script>
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
