--- a/loader.html
+++ b/loader.html
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Loader</title>
         <style>
             .loader{width: 100%; height: 100%; position: absolute; top:0; left: 0; background-color: #000000; display: flex; justify-content: center; align-items: center;}
